@@ -268,10 +268,19 @@ def get_epix_config_object(env, src) :
     o = cfg.get(_psana.Epix.Config100aV1, src)
     if o is not None : return o
 
+    o = cfg.get(_psana.Epix.Config10ka2MV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10ka2MV1, src)
     if o is not None : return o
 
+    o = cfg.get(_psana.Epix.Config10kaQuadV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10kaQuadV1, src)
+    if o is not None : return o
+
+    o = cfg.get(_psana.Epix.Config10kaV2, src)
     if o is not None : return o
 
     o = cfg.get(_psana.Epix.Config10kaV1, src)
@@ -291,10 +300,19 @@ def get_epix10ka_any_config_object(env, src) :
     """get epix10ka2m config object
     """
     cfg = env.configStore()
+    o = cfg.get(_psana.Epix.Config10ka2MV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10ka2MV1, src)
     if o is not None : return o
 
+    o = cfg.get(_psana.Epix.Config10kaQuadV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10kaQuadV1, src)
+    if o is not None : return o
+
+    o = cfg.get(_psana.Epix.Config10kaV2, src)
     if o is not None : return o
 
     o = cfg.get(_psana.Epix.Config10kaV1, src)
@@ -308,6 +326,9 @@ def get_epix10ka_config_object(env, src) :
     """get epix10ka config object faster than from get_epix_config_object
     """
     cfg = env.configStore()
+    o = cfg.get(_psana.Epix.Config10kaV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10kaV1, src)
     if o is not None : return o
 
@@ -319,6 +340,9 @@ def get_epix10ka2m_config_object(env, src) :
     """get epix10ka2m config object
     """
     cfg = env.configStore()
+    o = cfg.get(_psana.Epix.Config10ka2MV2, src)
+    if o is not None : return o
+
     o = cfg.get(_psana.Epix.Config10ka2MV1, src)
     if o is not None : return o
 
@@ -340,6 +364,8 @@ def get_epix10kaquad_config_object(env, src) :
     """get epix10kaquad config object
     """
     cfg = env.configStore()
+    o = cfg.get(_psana.Epix.Config10kaQuadV2, src)
+    if o is not None : return o
 
     o = cfg.get(_psana.Epix.Config10kaQuadV1, src)
     if o is not None : return o
