@@ -7,6 +7,10 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-17
+2021-04-29 Daniel Damiani
+- PyDataAccess.py - add support for new ddl config versions for epix10ka
+
 Tag: V02-00-16
 2020-04-27 Mikhail Dubrovin
 - UtilsJungfrauCalib.py - fix loger.info for missing constants replaced by default
